# rust-telemetry-datadog

./: Cargo.toml  LICENSE  README.md  otel_collector_config.yaml
examples/: client.rs
migrations/: 20220822183309_create_userinfo_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  telemetry.rs
src/routes/: create_user.rs  health_check.rs  mod.rs
