[package]
name = "rust-telemetry-datadog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tracing = "0.1.19"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio-current-thread"] }
opentelemetry-datadog = {version = "0.5.0", features=["reqwest-client"]}
tracing-opentelemetry = { version = "0.17" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.6"
