[package]
name = "rust-telemetry-datadog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tracing = "0.1.19"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "*", features = ["default"] }
tracing-opentelemetry = { version = "0.17" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.6"
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]